# ros_melodic_ws

./: .gitignore  simple_tree.bt
bash_scripts/: seven_dof_arm_test.sh
src/: seven_dof_arm.xacro
src/diff_wheeled_robot/: CMakeLists.txt  package.xml
src/first_sim_position/: CMakeLists.txt  package.xml
src/first_sim_position/src/: my_robot_position.cpp  pose_auv.cpp
src/g500_arm_description/: CMakeLists.txt  g500_arm_rviz.rviz  package.xml
src/g500_arm_description/launch/: g500_arm.launch
src/g500_arm_description/meshes/robot/ECA/: arm5b.3ds
src/g500_arm_description/objects/: amphora.stl  stone.stl
src/g500_arm_description/urdf/: arm_test.xacro  g500_arm.gv  g500_eca.urdf.xacro  g500_eca_pv.urdf  g500_eca_pv.urdf (copy).xacro  g500_eca_pv.xacro  g500_eca_teste_manipulador.urdf.xacro
src/g500_config/: .setup_assistant  CMakeLists.txt  package.xml
src/g500_config/config/: fake_controllers.yaml  g500_arm.srdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
src/g500_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  g500_arm_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/gazebo_meshes/: CMakeLists.txt  package.xml
src/import_duck_gazebo/: CMakeLists.txt  README.txtxt  package.xml
src/import_duck_gazebo/config/: my_robot_config.yaml
src/import_duck_gazebo/launch/: import_duck_gazebo.launch  my_robot_config.launch
src/import_duck_gazebo/meshes/: girona2_500.stl
src/import_duck_gazebo/urdf/: my_model.xacro  wheel.urdf.xacro  zoeira.xacro
src/joint_interface/src/: joint_interface_node.cpp
src/manipulator/: CMakeLists.txt  package.xml
src/manipulator/launch/: config.rviz  rviz.launch
src/manipulator/urdf/: .manipulator.xacro.swp  manipulator.xacro
src/mastering_ros_robot_description_pkg/launch/: diff_wheeled_robot.urdf
src/mastering_ros_robot_description_pkg/urdf/: seven_dof_arm.xacro
src/my_robot/: CMakeLists.txt  package.xml  readme.md
src/my_robot/config/: my_robot_config.yaml  my_robot_controllers.yaml
src/my_robot/launch/: amcl.launch  diff_my_robot.launch  gmapping.launch  my_robot.launch  my_robot2.launch  (+4 more)
src/seven_dof_arm_config/: .setup_assistant
src/seven_dof_arm_gazebo/: CMakeLists.txt  package.xml
src/seven_dof_arm_test/: CMakeLists.txt
src/simple_aruco_detector/: CMakeLists.txt  README.md  package.xml
src/simple_aruco_detector/config/: calibration_params.yml
src/simple_aruco_detector/launch/: aruco_marker_detector.launch
src/simple_aruco_detector/msg/: aruco_msg.msg
src/simple_aruco_detector/scripts/: aruco_interface.py
src/simple_aruco_detector/src/: aruco_marker_detector.cpp  camera_calibration.cpp  gazebo_aruco_detector.cpp  simple_aruco_detector_node.cpp
src/stepper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/testing_subs_pubs/: CMakeLists.txt  package.xml
src/velodyne_plugin/: CMakeLists.txt  package.xml
(+100 files in other folders)
